--- a/box/Vagrantfile
+++ b/box/Vagrantfile
@@ -73,6 +73,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-END
   apt update
   apt install -y apache2
+  rm -r /var/www/html/*
   cp -r /vagrant/webcontent/* /var/www/html/
   echo "Machine provisioned at $(date)! Welcome!"
   END
