--- a/box/Vagrantfile
+++ b/box/Vagrantfile
@@ -71,12 +71,12 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-END
-  apt update
   rm -r /var/www/BurpIntrude/app/*
   cp -r /vagrant/app/* /var/www/BurpIntrude/app
   service apache2 restart
   echo "Machine provisioned at $(date)! Welcome!"
   END
+  #apt update
   #yes | apt install -y apache2
   #yes | apt-get install python3
   #yes | apt-get install libapache2-mod-wsgi python-dev
