--- a/box/Vagrantfile
+++ b/box/Vagrantfile
@@ -71,8 +71,10 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-END
+  mv /var/www/BurpIntrude/app/tables.db /var/www/BurpIntrude/
   rm -r /var/www/BurpIntrude/app/*
   cp -r /vagrant/app/* /var/www/BurpIntrude/app
+  mv /var/www/BurpIntrude/tables.db /var/www/BurpIntrude/app
   service apache2 restart
   echo "Machine provisioned at $(date)! Welcome!"
   END
